make ListIntroduction2.java